<resources>
    <string name="app_name">Розклад занять НТУ ХПІ</string>

    <string name="schedule">Розклад</string>
    <string name="task">Завдання</string>
    <string name="buildings">Корпуси</string>
    <string name="settings">Параметри</string>
    <string name="choose_youself">Оберіть себе</string>

    <string name="search">Знайти</string>
    <string name="search.buildings">Введіть корпус</string>
    <string name="search.faculties">Введіть факультет</string>
    <string name="search.groups">Введіть групу</string>
    <string name="search.teacher">Введіть викладача</string>
    <string name="search.auditory">Введіть аудиторію</string>

    <string name="buildings_list_title">Учбові корпуси</string>
    <string name="buildings_description">Опис</string>
    <string name="buildings_map">Карта</string>

    <string name="category">Категорії</string>
    <string name="faculty">Факультети</string>
    <string name="department">Кафедри</string>

    <string name="first_course">Курс 1</string>
    <string name="second_course">Курс 2</string>
    <string name="third_course">Курс 3</string>
    <string name="fourth_course">Курс 4</string>
    <string name="fifth_course">Курс 5</string>
    <string name="sixth_course">Курс 6</string>

    <string name="monday">Понеділок</string>
    <string name="tuesday">Вівторок</string>
    <string name="wednesday">Середа</string>
    <string name="thursday">Четвер</string>
    <string name="friday">П\'ятниця</string>

    <string name="group">Група</string>
    <string name="groups">Групи</string>
    <string name="teacher">Викладач</string>
    <string name="subject">Предмет</string>
    <string name="type_task">Тип завдання</string>
    <string name="deadline">Строк виконання</string>
    <string name="detail">Деталі</string>
    <string name="description">Опис</string>
    <string name="task_detail">Деталі завдання</string>
    <string name="auditories">Аудиторії</string>
    <string name="teachers">Викладачі</string>
    <string name="course">Курс %d</string>
    <string name="map">Mапа</string>
    <string name="remove">Видалити</string>
    <string name="cancel">Відмініти</string>

    <string name="choose_group">Оберіть групу зі списку</string>
    <string name="choose_teacher">Оберіть викладача зі списку</string>
    <string name="choose_subject">Оберіть предмет зі списку</string>
    <string name="choose_date">Визначте строк виконання</string>
    <string name="subject_warning">Спочатку оберіть групу</string>
    <string name="detail_hint">Що потрібно виконати?</string>
    <string name="task_deadline">Виконати до %s</string>
    <string name="add_group_schedule_from_task">Додайте розклад групи, щоб додати завдання</string>
    <string name="add_teacher_schedule_from_task">Додайте розклад викладача, щоб додати завдання</string>
    <string name="add_task_empty">Додайте перше завдання</string>
    <string name="confirm_remove_schedule">Ви впевнені, що бажаєте видалити розклад?</string>
    <string name="confirm_remove_task">Ви впевнені, що бажаєте видалити завдання?</string>

    <plurals name="few_groups">
        <item quantity="one">%d група</item>
        <item quantity="two">%d групи</item>
        <item quantity="few">%d групи</item>
        <item quantity="many">%d груп</item>
        <item quantity="other">%d груп</item>
    </plurals>

    <string name="add_first_group">Додайте перший розклад групи</string>
    <string name="add_first_teacher">Додайте перший розклад викладача</string>
    <string name="add_first_auditory">Додайте перший розклад аудиторії</string>

    <string name="remove_schedule">Видалити розклад</string>
    <string name="refresh_schedule">Оновити розклад</string>
    <string name="edit_task">Редагувати завдання</string>
    <string name="create_task">Додати завдання</string>

    <string name="task_sort_date">Сортувати за датою</string>
    <string name="task_sort_group">Сортувати за групами</string>
    <string name="task_sort_subject">Сортувати за предметом</string>

    <string name="invert_week">Інвертувати тижні</string>
    <string name="invert_week_content">Якщо поточний тиждень визначається неправильно, натиснить сюди</string>
    <string name="update_schedule">Щоденне оновлення розкладу</string>
    <string name="update_schedule_content">Оновлення розкладу кожен день</string>
    <string name="notification">Повідомлення</string>
    <string name="vibrate">Вібрація</string>
    <string name="sound">Звук</string>
    <string name="remove_task">Видалення завдання</string>
    <string name="remove_task_content">Автоматичне видалення завдання після пари</string>
    <string name="info_title">Про додаток</string>
    <string name="version_content">v%s, останнє оновлення 14.05.2018</string>
    <string name="developer_title">Сумісна колаборація студентів НТУ \"ХПІ\"</string>
    <string name="user_message">Нижче оберіть, будь ласка, студент Ви або викладач</string>
    <string name="user_type">Тип користувача</string>
    <string name="user_student">Я студент</string>
    <string name="user_teacher">Я викладач</string>

    <string name="internet_error">При завантаженні даних трапилася помилка. Перевірте ваше підключення к мережі.</string>

    <string name="search_description_group">Введіть не меньш двох літер для пошуку групи</string>
    <string name="search_description_teacher">Введіть не меньш двох літер для пошуку викладача</string>
    <string name="search_description_auditory">Введіть не меньш двох літер для пошуку аудиторії</string>
    <string name="schedule_no_item">Для поточного дня немає розкладу занять</string>

</resources>
